Пернос css в папку css, изменение ссылок

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,4 @@
-@import url("http://fonts.fontstorage.com/import/alegreyasanssc.css")
+@import url("../http://fonts.fontstorage.com/import/alegreyasanssc.css")
 *
 	font-family: 'Alegreya Sans SC';
 	
