--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -89,7 +89,7 @@ nav
 
 	/* position: absolute;
 	min-height: 800px
-	background: url('img/bg/bg_main.png') center (center / cover) no-repeat
+	background: url('../img/bg/bg_main.png') center (center / cover) no-repeat
 	text-align: center
 
 	&_header
@@ -218,23 +218,23 @@ nav
 	position: relative
 	min-height: 864px
 	padding: 48px 0 79px 0
-	background: url('img/bg/bg_square.png') center center/cover no-repeat
+	background: url('../img/bg/bg_square.png') center center/cover no-repeat
 	&_item
 		margin-top: 19px
 		width: 320px
 		height: 280px
 		&_1
-			background: url("img/bg/bg_mobile_1.png") center (center / cover) no-repeat
+			background: url("../img/bg/bg_mobile_1.png") center (center / cover) no-repeat
 		&_2
-			background: url("img/bg/bg_mobile_2.png") center (center / cover) no-repeat
+			background: url("../img/bg/bg_mobile_2.png") center (center / cover) no-repeat
 		&_3
-			background: url("img/bg/bg_mobile_3.png") center (center / cover) no-repeat
+			background: url("../img/bg/bg_mobile_3.png") center (center / cover) no-repeat
 		&_4
-			background: url("img/bg/bg_mobile_4.png") center (center / cover) no-repeat
+			background: url("../img/bg/bg_mobile_4.png") center (center / cover) no-repeat
 		&_5
-			background: url("img/bg/bg_mobile_5.png") center (center / cover) no-repeat
+			background: url("../img/bg/bg_mobile_5.png") center (center / cover) no-repeat
 		&_6
-			background: url("img/bg/bg_mobile_6.png") center (center / cover) no-repeat
+			background: url("../img/bg/bg_mobile_6.png") center (center / cover) no-repeat
 	&_item_subtitle
 		padding-top: 92px
 		text-align: center
@@ -280,7 +280,7 @@ nav
 	position: relative
 	min-height: 895px
 	padding: 76px 0 0 0
-	background: url('img/bg/bg_square.png') center center/cover no-repeat
+	background: url('../img/bg/bg_square.png') center center/cover no-repeat
 	&_white
 		position: relative
 		width: 100%;
@@ -334,7 +334,7 @@ nav
 				left: -31px
 				width: 21px
 				height: 20px
-				background: url('icons/check.svg') center center/cover no-repeat
+				background: url('../icons/check.svg') center center/cover no-repeat
 	&_descr
 		font-weight: 300
 		font-size: 17px
@@ -346,14 +346,14 @@ nav
 		.require_list
 			li
 				&:before
-					background: url('icons/check_pink.svg') center center/cover no-repeat
+					background: url('../icons/check_pink.svg') center center/cover no-repeat
 
 .map
 	position: relative
 	width: 100%
 	min-height: 716px
 	padding-top: 99px
-	background: url('img/bg/world_bg.jpg') center center/contain no-repeat
+	background: url('../img/bg/world_bg.jpg') center center/contain no-repeat
 	background-color: #080810
 	&_all
 		position: absolute
